--- a/xbook-frontend/public/manifest.json
+++ b/xbook-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "XBook",
+  "name": "XBook - A Terminal-esque Facebook portal",
   "icons": [
     {
       "src": "favicon.ico",
