--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,18 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      - image: circleci/node:10.16.3
     steps:
       - checkout
       - run:
-          name: CD to frontend
+          name: test frontend
           command: |
             cd xbook-frontend
+            sudo npm install -g npm@latest
             npm install
             ls -al
       - run:
-          name: CD to backend
+          name: test backend
           command: |
             cd xbook-backend
             python3 test.py
