--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,5 @@ jobs:
           name: test backend
           command: |
             cd xbook-backend
+            pip3 install flask, unittest
             python3 test.py
