--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:10.16.3
+      - image: circleci/python:3.7.3
     steps:
       - checkout
       - run:
