--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,5 @@ jobs:
           name: test backend
           command: |
             cd xbook-backend
-            pip install flask, unittest
+            pip3 install flask, unittest
             python3 test.py
