--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name install dependency
+          command: apk add --no-cache py-pip=9.0.0-r1
+      - run:
           name: test frontend
           command: |
             cd xbook-frontend
