--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name install dependency
+          name: install dependency
           command: apk add --no-cache py-pip=9.0.0-r1
       - run:
           name: test frontend
