--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,10 @@ jobs:
       - checkout
       - run:
           name: install dependency
-          command: apk add --no-cache py-pip=9.0.0-r1
+          command: |
+            curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+            python get-pip.py
+            pip install -U pip
       - run:
           name: test frontend
           command: |
