--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2.1
 jobs:
-  build:
+  one:
     docker:
       - image: circleci/node:10.16.3
-      - image: circleci/python:3.7.3
     steps:
       - checkout
       - run:
@@ -13,9 +12,21 @@ jobs:
             sudo npm install -g npm@latest
             npm install
             npm test
+  two:
+    docker:
+      - image: circleci/python:3.7.3
+    steps:
+      - checkout
       - run:
           name: test backend
           command: |
             cd xbook-backend
             sudo pip install flask, unittest
             python test.py
+
+workflow:
+  version: 2.1
+  build:
+    jobs:
+      - one
+      - two
