--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             cd xbook-backend
             sudo pip install -r requirements.txt
             (./cloud_sql_proxy -instances=xbook010:us-west1:xbook-db=tcp:3307) &
-            (wait 10 & python test.py) 
+            (wait 10; python test.py) 
 
 workflows:
   version: 2.1
