--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,9 @@ jobs:
           name: test backend
           command: |
             cd xbook-backend
-            sudo pip install -r requirements.txt
-            (./cloud_sql_proxy -instances=xbook010:us-west1:xbook-db=tcp:3307) & (sleep 10; python test.py)
+            export GOOGLE_APPLICATION_CREDENTIALS="./meta_files/xbook010-5d1f27feba42.json" 
+            sudo pip install -r ./meta_files/requirements.txt
+            (./meta_files/cloud_sql_proxy -instances=xbook010:us-west1:xbook-db=tcp:3307) & (sleep 10; python test.py)
 
 workflows:
   version: 2.1
